# Gandalf

./: CMakeLists.txt  README.md  main.cpp
manager/: CMakeLists.txt  manager_factory.cpp  manager_factory.h
proto/: CMakeLists.txt  config.proto  user_profile.proto
util/: CMakeLists.txt  io.cpp  io.h  manager.h  util.cpp  util.h
