FIND_PACKAGE(Protobuf REQUIRED)
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER user_profile.proto config.proto)
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
TARGET_INCLUDE_DIRECTORIES(proto PUBLIC ${PROTOBUF_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(proto ${Protobuf_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
